# modality-probe-debug-collector-example

./: .gitignore  Cargo.toml  README.md  build.rs  collect_log_data.sh  flash.sh  openocd.gdb  trace_log.sh  visualize_graphs.sh
.cargo/: config
example-component/: Component.toml  events.csv  probes.csv
src/: component_definitions.rs  main.rs
