[package]
name = "example-project"
version = "0.1.0"
authors = ["Jon Lamb <jon@auxon.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6"
panic-abort = "0.3.2"

[dependencies.modality-probe]
git = "https://github.com/auxoncorp/modality-probe.git"
branch = "master"
version = "0.3.0"
default-features = false
features = []

[dependencies.smoltcp]
version = "0.6.0"
default-features = false
features = ["ethernet", "proto-ipv4", "socket-tcp", "socket-icmp"]

[dependencies.stm32-eth]
version = "0.2.0"
git = "https://github.com/stm32-rs/stm32-eth.git"
features = ["stm32f429", "smoltcp-phy"]

[dependencies.stm32f4xx-hal]
version = "0.8.3"
features = ["stm32f429", "rt"]

[build-dependencies.modality-probe-cli]
git = "https://github.com/auxoncorp/modality-probe.git"
branch = "master"
version = "0.3.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
